cliente/build_error_utf8.txt

> cliente@0.0.0 build
> tsc -b && vite build

[36mvite v5.4.21 [32mbuilding for production...[36m[39m
transforming...
node.exe : node:internal/process/
promises:394
En línea: 1 Carácter: 1
+ & "C:\Program 
Files\nodejs/node.exe" 
"C:\Program Files\nodejs/node_mo 
...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~
    + CategoryInfo          : No 
   tSpecified: (node:internal/p  
  rocess/promises:394:String)    
 [], RemoteException
    + FullyQualifiedErrorId : Na 
   tiveCommandError
 
    
triggerUncaughtException(err, 
true /* fromPromise */);
    ^

[Failed to load PostCSS config: 
Failed to load PostCSS config 
(searchPath: C:/Users/Fixius50/De
sktop/ProyectoIntermodularDAM/cli
ente): [Error] Loading PostCSS 
Plugin failed: Cannot find 
module 'tailwindcss'
Require stack:
- C:\Users\Fixius50\Desktop\Proye
ctoIntermodularDAM\cliente\postcs
s.config.js

(@C:\Users\Fixius50\Desktop\Proye
ctoIntermodularDAM\cliente\postcs
s.config.js)
Error: Loading PostCSS Plugin 
failed: Cannot find module 
'tailwindcss'
Require stack:
- C:\Users\Fixius50\Desktop\Proye
ctoIntermodularDAM\cliente\postcs
s.config.js

(@C:\Users\Fixius50\Desktop\Proye
ctoIntermodularDAM\cliente\postcs
s.config.js)
    at load (file:///C:/Users/Fix
ius50/Desktop/ProyectoIntermodula
rDAM/cliente/node_modules/vite/di
st/node/chunks/dep-BK3b2jBa.js:33
632:11)
    at file:///C:/Users/Fixius50/
Desktop/ProyectoIntermodularDAM/c
liente/node_modules/vite/dist/nod
e/chunks/dep-BK3b2jBa.js:33657:16
    at Array.map (<anonymous>)
    at plugins (file:///C:/Users/
Fixius50/Desktop/ProyectoIntermod
ularDAM/cliente/node_modules/vite
/dist/node/chunks/dep-BK3b2jBa.js
:33656:8)
    at processResult (file:///C:/
Users/Fixius50/Desktop/ProyectoIn
termodularDAM/cliente/node_module
s/vite/dist/node/chunks/dep-BK3b2
jBa.js:33726:14)
    at file:///C:/Users/Fixius50/
Desktop/ProyectoIntermodularDAM/c
liente/node_modules/vite/dist/nod
e/chunks/dep-BK3b2jBa.js:33856:14
]

Node.js v24.13.1
